# akon

./: .gitignore  Cargo.toml  LICENSE  Makefile  OPENCONNECT_SETUP.md  PROGRESS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SAFE_REFACTORING_COMPLETE.md  VPN_SUCCESS_REPORT.md  clippy.toml  rustfmt.toml  test_openconnect.c
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
akon-core/: Cargo.toml  openconnect-internal.h  progress_shim.c  wrapper.h
akon-core/src/: error.rs  lib.rs  types.rs
akon-core/src/auth/: base32.rs  hmac.rs  keyring.rs  keyring_mock.rs  mod.rs  password.rs  totp.rs
akon-core/src/config/: mod.rs  toml_config.rs
akon-core/src/vpn/: cli_connector.rs  connection_event.rs  health_check.rs  mod.rs  network_monitor.rs  openconnect.rs  output_parser.rs  process.rs  reconnection.rs  state.rs
akon-core/tests/: auth_tests.rs  cleanup_tests.rs  cli_connector_tests.rs  config_integration_tests.rs  config_tests.rs  connection_event_tests.rs  connection_state_tests.rs  cross_compatibility_tests.rs  error_tests.rs  health_check_flow_tests.rs  health_check_tests.rs  integration_keyring_tests.rs  network_monitor_tests.rs  output_parser_tests.rs  performance_tests.rs  reconnection_config_tests.rs  reconnection_flow_tests.rs  reconnection_tests.rs  types_tests.rs
akon-core/tests/fixtures/: custom_config.toml  test_config.toml
akon-core/tests/integration/: manual_recovery_tests.rs
debian/: postinst  postrm  prerm
examples/: test_health_check.rs
rpm/: post-install.sh  post-uninstall.sh  pre-uninstall.sh
scripts/: setup-sudo.sh
specs/001-cli-tool/: COMPATIBILITY-SUMMARY.md  PHASE-7-COMPLETION-REPORT.md  REFACTOR-PIN-OTP.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-tool/checklists/: requirements.md
specs/001-cli-tool/contracts/: setup-command.md  vpn-off-command.md  vpn-on-command.md
specs/002-ci-pipeline-with/: PLANNING-REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ci-pipeline-with/contracts/: ci-workflow.md
specs/002-refactor-openconnect-to/: COMPLETION.md  ROBUSTNESS-ENHANCEMENT-REPORT.md  SESSION-SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-refactor-openconnect-to/checklists/: requirements.md
specs/002-refactor-openconnect-to/contracts/: vpn-off-command.md  vpn-on-command.md  vpn-status-command.md
specs/003-network-interruption-detection/: ACCEPTANCE-VALIDATION.md  DEFERRED-TASKS-COMPLETION.md  E2E-VALIDATION-PLAN.md  E2E-VALIDATION-RESULTS-PHASE4.md  PHASE-7-COMPLETION-REPORT.md  QUICKSTART-VALIDATION.md  RECONNECTION-MANAGER-INTEGRATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-network-interruption-detection/checklists/: requirements.md
specs/003-network-interruption-detection/contracts/: health-checker.md  network-monitor.md  reconnection-manager.md  vpn-cleanup-command.md  vpn-reset-command.md
specs/004-fix-vpn-off/: IMPLEMENTATION-SUMMARY.md  RESET-COMMAND-REMOVAL.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-vpn-off/checklists/: requirements.md
specs/004-fix-vpn-off/contracts/: function-contracts.md
src/: main.rs
src/cli/: get_password.rs  mod.rs  setup.rs  vpn.rs
src/daemon/: ipc.rs  mod.rs  process.rs
tests/: error_state_status_tests.rs  get_password_tests.rs  keyring_tests.rs  lazy_mode_tests.rs  reconnection_health_check_tests.rs  setup_tests.rs  vpn_disconnect_tests.rs  vpn_status_tests.rs
tests/integration/: get_password_tests.rs  keyring_tests.rs  setup_tests.rs  vpn_disconnect_tests.rs  vpn_status_tests.rs
