[workspace]
members = ["akon-core"]
resolver = "2"

[package]
name = "akon"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "deny"

[[bin]]
name = "akon"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
daemonize.workspace = true
nix.workspace = true
serde_json.workspace = true
libc.workspace = true
serde.workspace = true
tokio.workspace = true
# Additional dependencies
which = "6.0"
chrono = "0.4"
colored = "2.1"
# Local crate
akon-core = { path = "akon-core" }

[workspace.dependencies]
# Core dependencies shared across crates
secrecy = "0.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "full"] }

# Security and crypto
totp-lite = "2.0"
base32 = "0.4"
keyring = { version = "3.6", features = ["sync-secret-service"] }

# Build and FFI
bindgen = "0.69"
daemonize = "0.5"
nix = { version = "0.27", features = ["signal", "process", "user"] }
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
cargo-tarpaulin = "0.27"
tempfile = "3.0"
