[workspace]
members = ["akon-core"]
resolver = "2"

[package]
name = "akon"
version = "1.1.1"
edition = "2021"
authors = ["vcwild"]
description = "A CLI tool for managing VPN connections with OpenConnect"
license = "MIT"
repository = "https://github.com/vcwild/akon"
homepage = "https://github.com/vcwild/akon"
readme = "README.md"
keywords = ["vpn", "openconnect", "cli", "networking"]
categories = ["command-line-utilities", "network-programming"]

[lints.rust]
dead_code = "deny"

# Debian package metadata for cargo-deb
[package.metadata.deb]
maintainer = "vcwild"
copyright = "2025, vcwild"
license-file = ["LICENSE", "4"]
extended-description = """\
akon is a command-line tool for managing VPN connections using OpenConnect.
It provides an easy-to-use interface for connecting to VPN servers with support
for automatic reconnection, health checks, and daemon mode operation."""
depends = "openconnect, procps"
section = "net"
priority = "optional"
assets = [
    ["target/release/akon", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/akon/", "644"],
    ["LICENSE", "usr/share/doc/akon/", "644"],
]
maintainer-scripts = "debian/"

# RPM package metadata for cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/akon", dest = "/usr/bin/akon", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/akon/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/akon/LICENSE", mode = "644" },
]
post_install_script = "rpm/post-install.sh"
pre_uninstall_script = "rpm/pre-uninstall.sh"
post_uninstall_script = "rpm/post-uninstall.sh"

[package.metadata.generate-rpm.requires]
openconnect = "*"
procps-ng = "*"

[[bin]]
name = "akon"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
daemonize.workspace = true
nix.workspace = true
serde_json.workspace = true
libc.workspace = true
serde.workspace = true
tokio.workspace = true
# Additional dependencies
which = "6.0"
chrono = "0.4"
colored = "2.1"
# Local crate
akon-core = { path = "akon-core" }

[workspace.dependencies]
# Core dependencies shared across crates
secrecy = "0.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "sync", "signal", "full"] }

# Security and crypto
totp-lite = "2.0"
base32 = "0.4"
keyring = { version = "3.6", features = ["sync-secret-service"] }

# Build and FFI
bindgen = "0.69"
daemonize = "0.5"
nix = { version = "0.27", features = ["signal", "process", "user"] }
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
cargo-tarpaulin = "0.27"
tempfile = "3.0"
lazy_static = "1.5"

# Profile optimizations for faster builds and better caching
[profile.dev]
# Enable incremental compilation for faster rebuilds
incremental = true
# Split debuginfo to separate files for better caching
split-debuginfo = "unpacked"

[profile.test]
# Inherit from dev profile for consistency
inherits = "dev"
# Enable incremental compilation for tests
incremental = true

[profile.release]
# Optimize for performance in release builds
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

