[package]
edition = "2021"
name = "akon-core"
version = "0.1.0"

[lints.rust]
dead_code = "deny"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
base32.workspace = true
keyring.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
totp-lite.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
data-encoding = "2.9.0"
sha1 = "0.10.6"
libc = "0.2"

[build-dependencies]
bindgen.workspace = true
cc = "1.0"

[dev-dependencies]
cargo-tarpaulin = "0.27"
serde_json = "1.0"
hex = "0.4"
tempfile = "3.0"
