[package]
edition = "2021"
name = "akon-core"
version = "1.2.1"

[features]
default = []
mock-keyring = []

[lints.rust]
dead_code = "deny"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
base32.workspace = true
keyring.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
totp-lite.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tokio.workspace = true
nix.workspace = true
data-encoding = "2.9.0"
sha1 = "0.10.6"
regex = "1.10"
chrono = "0.4"

# Network interruption detection dependencies
zbus = "4.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2.5"

[dev-dependencies]
cargo-tarpaulin = "0.27"
serde_json = "1.0"
hex = "0.4"
tempfile = "3.0"
criterion = "0.5"
tokio-test = "0.4"
wiremock = "0.6"
lazy_static = "1.5"
